--- a/quarto-1.html
+++ b/quarto-1.html
@@ -63,25 +63,26 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div class="cell">
-<div class="cell-output cell-output-stderr">
-<pre><code>── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-✔ dplyr     1.1.4     ✔ readr     2.1.5
-✔ forcats   1.0.0     ✔ stringr   1.5.1
-✔ ggplot2   3.5.2     ✔ tibble    3.2.1
-✔ lubridate 1.9.4     ✔ tidyr     1.3.1
-✔ purrr     1.0.4     
-── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-✖ dplyr::filter() masks stats::filter()
-✖ dplyr::lag()    masks stats::lag()
-ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
-</div>
-</div>
+<p>Despite a wide range of population sizes, the economic connectedness values are spread fairly evenly and do not show a strong upward or downward trend. The flat regression line visually supports the claim in the subtitle: population size is not strongly correlated with economic connectedness.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
 <p><img src="quarto-1_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<p>The histogram shows a strong right skew in population distribution:</p>
+<p>1- Most counties have small populations, clustering on the lower end of the log scale.</p>
+<p>2- A small number of counties have very large populations, visible as bars on the far right.</p>
+<p>3- The log scale helps reveal this skew by compressing the higher values and spreading out the lower values for better visualization.</p>
+<p>This distribution suggests that while a few urban counties are highly populated, the vast majority of U.S. counties are relatively small in population — a typical feature of population data.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="quarto-1_files/figure-html/unnamed-chunk-3-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
